# 3DTelecommunications

./: .gitignore  CMakeLists.txt  NOTICE.md  Peabody.h  Peabody.x64.DXUT.props  Peabody.x64.FreeGLUT.props  Peabody.x64.GLEW.props  Peabody.x64.K4AAudio.props  Peabody.x64.McLib2.props  Peabody.x64.VXL.props  Peabody.x64.VisionLib.props  Peabody.x64.boost_1_72_0.props  Peabody.x64.buildVersion.props  Peabody.x64.debug.Libfreenect.props  Peabody.x64.debug.SuiteSparse_mkl.props  Peabody.x64.debug.Xerces3.props  Peabody.x64.debug.ceres-solver.props  Peabody.x64.debug.cuda.props  Peabody.x64.debug.k4a.props  Peabody.x64.debug.opencv.props  Peabody.x64.debug.ptgrey.props  Peabody.x64.eSPDI.props  Peabody.x64.json.props  Peabody.x64.libjpeg.props  Peabody.x64.lz4.props  Peabody.x64.nvVideoEncoder.props  Peabody.x64.oglplus.props  Peabody.x64.qhull.props  Peabody.x64.release.Libfreenect.props  Peabody.x64.release.SuiteSparse_mkl.props  Peabody.x64.release.Xerces3.props  Peabody.x64.release.ceres-solver.props  Peabody.x64.release.cuda.props  Peabody.x64.release.k4a.props  Peabody.x64.release.opencv.props  Peabody.x64.release.ptgrey.props  Peabody.x64.sparselm.props  Peabody.x64.tslib.props  Peabody.x64.zlib.props  Peabody.x64.zmq.props  (+5 more)
CalibrationTools/: .gitignore  CalibrationTools.sln
CalibrationTools/CalibrationSoftware/: CalibrationSoftware.cpp  CalibrationSoftware.vcxproj  CalibrationSoftware.vcxproj.filters  CalibrationSoftwareControlPanelConnector.cpp  CalibrationSoftwareControlPanelConnector.h  packages.config
CalibrationTools/PAICalibration/: PAICalibration.cpp  PAICalibration.h  PAICalibration.vcxproj  PAICalibration.vcxproj.filters  convertPAICalibration.cpp  convertPAICalibration.h  packages.config
ConfigFileExamples/: 3DTelecommunications.cfg  3DTelemedicine.cfg
ConfigFileExamples/CameraRecorder/: config.txt
ControlPanel/: BotManager.cs  ComponentStatus.cs  ControlPanel.csproj  ControlPanel.sln  EventBot.cs  Form1.Designer.cs  Form1.cs  Form1.resx  OutputHelper.cs  Program.cs  SettingsManager.cs  SocketBot.cs  StatusBot.cs  nlog.config
ControlPanelUnity/: .gitignore
ControlPanelUnity/Assets/: 3DTelemedicine.cfg.default  CalibRenderTexture.renderTexture  CalibrateButtonBehavior.cs  PreviewRenderTexture.renderTexture
ControlPanelUnity/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
DeformableFusion/: .gitignore  3DReconstructionOutputPaths-MultiProject.props  3DReconstructionOutputPaths.props  DeformableFusion.sln
DeformableFusion/Basics/: Basics.vcxproj  Basics.vcxproj.filters  DDF.cpp  DDF.h  KL_features.cpp  KL_features.h  RigidTransformModel.h  S3DPointMatchSet.cpp  S3DPointMatchSet.h  TSDF.cpp  TSDF.h  basic_geometry.cpp  basic_geometry.h  basic_geometry.hpp  basic_structure.cpp  basic_structure.h  basic_structure.hpp  bgSub.cpp  depth_map_filter.cpp  depth_map_filter.h  distortion_correction.cpp  distortion_correction.h  distortion_correction.hpp  func_jacobians.h  normal_estimation.cpp  normal_estimation.h  stdafx.cpp  stdafx.h  surface_misc.h  surface_misc.hpp  track_extraction_basic.cpp  track_extraction_basic.h  visual_feature_matching.cpp  visual_feature_matching.h  voxel_data_io.cpp  voxel_data_io.h
DeformableFusion/CSurface/: CIsoSurface.cpp  CIsoSurface.h  CPointCloud.h  CPointCloud.hpp  CSurface.cpp  CSurface.h  CSurface.hpp  CSurface.vcproj  CSurface.vcxproj  CSurface.vcxproj.filters  glm.h  glmOBJ-VS10-64.lib  glmOBJ-VS10.lib  glmOBJ-vs2008.lib  glmOBJ.lib  ply.cpp
DeformableFusion/CameraView/: CameraView.cpp  CameraView.h  CameraView.vcxproj  CameraView.vcxproj.filters
DeformableFusion/Common/: debug.h
DeformableFusion/FastNonrigidMatching/: BlockedHessianMatrix.h  CCLCuda.cpp  CCLCuda.h  CCLCudaImpl.cu  CCLCudaImpl.h  CMotionFieldEstimationF2F.cpp  CMotionFieldEstimationF2F.h  CudaGlobalMemory.cpp  CudaGlobalMemory.h  DeformGraphCuda.cpp  DeformGraphCuda.h  DeformGraphCudaImpl.cu  DeformGraphCudaImpl.cuh  DeformGraphCudaImpl_GPU.cu  DeformGraphCudaImpl_GPU.cuh  DeformGraphCuda_GPU.cpp  DeformGraphCuda_GPU.h  EDMatchingHelperCuda.cpp  EDMatchingHelperCuda.h  EDMatchingHelperCudaImpl.cu  EDMatchingHelperCudaImpl.cuh  EDMatchingHelperCudaImplInit.cu  EDMatchingHelperCudaImplInit_v2.cu  EDMatchingHelperCudaImplInit_v2_reg.cu  EDMatchingHelperCudaImplRegTerm.cu  EDMatchingHelperCudaImpl_GPU.cu  EDMatchingHelperCudaImpl_GPU.cuh  EDMatchingHelperCudaImpl_keypts.cu  EDMatchingHelperCudaImpl_residual.cu  EDMatchingHelperCudaImpl_rigid.cu  EDMatchingHelperCuda_GPU.cpp  (+65 more)
InterprocessCommunication/: InterProcessCommunication.sln
Kinect/DepthPodToFusionARM/: CMakeLists.txt  DepthPodToFusion.cpp  DepthPodToFusionAPI.h
Kinect/K4ALauncherDaemon/: CMakeLists.txt  K4ALauncherDaemon.cpp  K4ALauncherDaemon.h  SamplePublisher.py  SampleSub.py
Kinect/K4ALauncherDaemon/cmake/: Findk4a.cmake
Kinect/K4ARecorder/: CMakeLists.txt  K4ARecorder.cpp  K4ARecorder.h  recorder.cpp  recorder.h
Kinect/K4AToFusionJetson/: CMakeLists.txt  K4ACaptureSource.cpp  K4ACaptureSource.h  K4ACommon.h  K4AControlPanelConnector.cpp  K4AControlPanelConnector.h  K4ADepthProcessing.h  K4ASourceManager.cpp  K4ASourceManager.h  K4AToFusion.cpp  SourceStats.cpp  SourceStats.h  Util.cpp  Util.h  stdafx.h
Kinect/K4AToFusionJetson/cmake/: FindSoundIo.cmake  Findk4abt.cmake
LED Display/: LEDSerialWriter.hpp  boot.py  code.py
McLib2/LibUtility/: CMakeLists.txt  LibUtility.vcxproj  LibUtility.vcxproj.filters
McLib2/LibUtility/include/: Config.h  Logger.h  Macros.h  TimeUtil.h  WorkerThreadT.h
McLib2/LibUtility/src/: Config.cpp  Logger.cpp  TimeUtil.cpp
Networking/: BufferAggregator.cpp  BufferAggregator.h  ControlPanelConnector.cpp  ControlPanelConnector.h  NetworkingDataTypes.h  TCPclient.cpp  TCPclient.h  TCPserver.cpp  TCPserver.h
Networking_Linux_ARM/: Win2Linux.h
RenderingClient/: .gitignore  rendering_client.sln
Scripts/: CreateIncludeFileFromGitVersion.ps1  CreateScheduledTasksForUser.ps1  FileRotate.ps1  NewComputer_3DTM_Environment_Setup.ps1  UploadBinariesToNano.ps1
UnityRenderer/: .gitignore  README.md
Viewer/: .gitignore  README.md
(+540 files in other folders)
